--- a/public/dAppData.json
+++ b/public/dAppData.json
@@ -3,21 +3,21 @@
     "name": "Stashh",
     "link": "https://stashh.io/",
     "description": "Mint, buy, and trade the first NFTs with native privacy and access control, known as Secret NFTs.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/dapp_stashh_1b5ff9f3a5_lo5nfGSI-6.png",
+    "icon": "/img/dapps/dapp_stashh_1b5ff9f3a5_lo5nfGSI-6.webp",
     "tags": ["dApp", "NFTs"]
   },
   {
     "name": "Shade Protocol",
     "link": "https://shadeprotocol.io/",
     "description": "An array of connected privacy-preserving DeFi applications built on Secret Network.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/dapp_shade_206fbe8b01_U9LBd0ib1-.png",
+    "icon": "/img/dapps/dapp_shade_206fbe8b01_U9LBd0ib1-.webp",
     "tags": ["dApp", "DeFi"]
   },
   {
     "name": "Legendao",
     "link": "https://legendao.io/",
     "description": "A play-to-mint NFT platform that enables creators to launch their NFT projects in a unique, gamified way.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Legen_DAO_50bba9ea5b_tQG5m-PJd.png",
+    "icon": "/img/dapps/Legen_DAO_50bba9ea5b_tQG5m-PJd.webp",
     "tags": ["dApp", "Games"]
   },
   {
@@ -31,161 +31,161 @@
     "name": "Bushi",
     "link": "https://www.launchonenet.io/bushi",
     "description": "A competitive third-person shooter that blurs the lines between traditional games, web3 gaming, and esports.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Bushi_Logo_e7f4a6035a_u53uS1dcu.png",
+    "icon": "/img/dapps/Bushi_Logo_e7f4a6035a_u53uS1dcu.webp",
     "tags": ["Games"]
   },
   {
     "name": "Data Vault",
     "link": "https://secretbazaar.io/",
     "description": "The world’s first decentralized privacy-preserving content management and data exchange protocol.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/dava_957cbedba4_macvuNgj6Z.png",
+    "icon": "/img/dapps/dava_957cbedba4_macvuNgj6Z.webp",
     "tags": ["dApp", "Data"]
   },
   {
     "name": "V-IRL",
     "link": " https://www.v-irl.com/",
     "description": "Bridging Virtual assets to real life. The world's first anonymous on-chain redemptions. Merch, authentication, ticketing/access, and more.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/V_IRL_Logo_bad455cf9a_Lt6VmuQ84.png",
+    "icon": "/img/dapps/V_IRL_Logo_bad455cf9a_Lt6VmuQ84.webp",
     "tags": ["dApp", "NFTs"]
   },
   {
     "name": "CertUP",
     "link": "https://certup.net/",
     "description": "Revolutionising official document distribution, verification and publication through Secret NFTs.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Cert_UP_Logo_014ac8ed6b_1m7Lm6NPa.png",
+    "icon": "/img/dapps/Cert_UP_Logo_014ac8ed6b_1m7Lm6NPa.png",
     "tags": ["dApp", "Data", "NFTs"]
   },
   {
     "name": "YOIU",
     "link": "https://twitter.com/yoiu_io",
     "description": "A gateway to future IDO's of tech startups, fueled by secret tokens.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/small_yoiu_f225ee0f53_PU7mLbkLVj.png",
+    "icon": "/img/dapps/small_yoiu_f225ee0f53_PU7mLbkLVj.webp",
     "tags": ["dApp", "DeFi"]
   },
   {
     "name": "ActiList",
     "link": "https://actilist.io",
     "description": "Interactive NFT marketplace with secret auctions and customizable access control.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/actiii_0bfc731011_1eMhswD8v.png",
+    "icon": "/img/dapps/actiii_0bfc731011_1eMhswD8v.webp",
     "tags": ["dApp", "NFTs"]
   },
   {
     "name": "Button Swap",
     "link": "https://btn.group/secret_network/button_swap",
     "description": "A DEX aggregator, giving you the most optimal swap routes across Secret Network DEXs.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/dapp_btn_group_506992a414_OGGGyv_0NG.png",
+    "icon": "/img/dapps/dapp_btn_group_506992a414_OGGGyv_0NG.webp",
     "tags": ["dApp", "DeFi"]
   },
   {
     "name": "PriFi Labs",
     "link": "https://prifilabs.com/",
     "description": "PriFi Labs experiments and designs trustless solutions to help businesses and users to have enhanced protection in Web3.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/prifiw_3f394c00a6_MQVbTriV0.png",
+    "icon": "/img/dapps/prifiw_3f394c00a6_MQVbTriV0.png",
     "tags": ["dApp", "Data"]
   },
   {
     "name": "Eqoty",
     "link": "https://eqoty.io/",
     "description": "The first content-protected marketplace for utility-backed music NFTs.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/eqotyb_a53851f4dd_SW5_jrsi3.png",
+    "icon": "/img/dapps/eqotyb_a53851f4dd_SW5_jrsi3.webp",
     "tags": ["dApp", "Data", "NFTs"]
   },
   {
     "name": "Secret Bridges",
     "link": "https://dash.scrt.network/bridge",
     "description": "Bridge assets from IBC, EVM, and other ecosystems to Secret.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Bridges_Logo_2_32f36a3c58_NP9oBOxR9.png",
+    "icon": "/img/dapps/Bridges_Logo_2_32f36a3c58_NP9oBOxR9.webp",
     "tags": ["Tool"]
   },
   {
     "name": "AmberDAO",
     "link": "https://amberdao.io/",
     "description": "A community-driven, privacy-preserving store of value token built on Secret Network.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Amber_Dao_Logo_fd192c1e11_NaDWj0aOA.png",
+    "icon": "/img/dapps/Amber_Dao_Logo_fd192c1e11_NaDWj0aOA.webp",
     "tags": ["dApp", "DeFi"]
   },
   {
     "name": "Secret Tokens",
     "link": "https://dashboard.scrt.network/wrap",
     "description": "Wrapping Coins as Secret Tokens immediately supercharges them with private balances and private transfers.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/stoken_2f0fb694df_bMVioaSGb.png",
+    "icon": "/img/dapps/stoken_2f0fb694df_bMVioaSGb.webp",
     "tags": ["dApp", "Data"]
   },
   {
     "name": "BlackJack",
     "link": "https://aart-blackjack.anther.info/landingpage",
     "description": "A shedding card game built on Secret, making use of privacy-preserving smart contracts.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/blackjack_21ad501117_OCc2FU9di.png",
+    "icon": "/img/dapps/blackjack_21ad501117_OCc2FU9di.webp",
     "tags": ["dApp", "Games"]
   },
   {
     "name": "Abakhus",
     "link": "https://abakhus.io/",
     "description": "A protocol to secure health and life science data.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/abak_ac4896396e_vxSiezw8y.jpeg",
+    "icon": "/img/dapps/abak_ac4896396e_vxSiezw8y.webp",
     "tags": ["dApp", "Communications", "Data"]
   },
   {
     "name": "Secret Dashboard",
     "link": "https://dash.scrt.network/",
     "description": "An interface providing access to essential Secret Network functions and data.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/small_dashb_e1299d7523_QwkrgHrFr.png",
+    "icon": "/img/dapps/small_dashb_e1299d7523_QwkrgHrFr.webp",
     "tags": ["Data"]
   },
   {
     "name": "Secret Admirers",
     "link": "https://twitter.com/AdmirariDAO",
     "description": "A decentralized and privacy-preserving adult content subscription platform.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/secadm_e92dc01c7d_vH-bLkpkX.jpeg",
+    "icon": "/img/dapps/secadm_e92dc01c7d_vH-bLkpkX.webp",
     "tags": ["dApp", "Data", "NFTs"]
   },
   {
     "name": "Alter",
     "link": "https://altermail.live/",
     "description": "A private and secure messaging app that protects your data and identity when communicating online. ",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/alter_f51dbe4916_esXgp8g8j.png",
+    "icon": "/img/dapps/alter_f51dbe4916_esXgp8g8j.webp",
     "tags": ["dApp", "Communications"]
   },
   {
     "name": "Serenity Shield",
     "link": "https://serenityshield.io/",
     "description": "Serenity Shield provides a tool for backing up your seed phrase and other sensitive data, allowing recovery in an emergency event.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/Serenity_Shield_Logo_0e5e4c6737_7GV7QGAFN.png",
+    "icon": "/img/dapps/Serenity_Shield_Logo_0e5e4c6737_7GV7QGAFN.png",
     "tags": ["dApp", "Data"]
   },
   {
     "name": "ShillStake",
     "link": "https://shillstake.io/",
     "description": "Stake Secret NFTs and Earn Rewards",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/shillstake_6a6689939a_LXXm3YOgd.png",
+    "icon": "/img/dapps/shillstake_6a6689939a_LXXm3YOgd.png",
     "tags": ["dApp", "DeFi", "NFTs"]
   },
   {
     "name": "Whisprs",
     "link": "https://whisprs.co/",
     "description": "Send encrypted messages to any Cosmos based wallet address",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/favicon_1ddd016da6_RbudtOnkDX.png",
+    "icon": "/img/dapps/favicon_1ddd016da6_RbudtOnkDX.png",
     "tags": ["dApp", "Communications"]
   },
   {
     "name": "wallet79",
     "link": "https://wallet79.com/",
     "description": "Matches people with jobs and education using digital signatures, while preserving data privacy.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/small_wallet79_logo_dd31a1d3c8_wOQgv6rca.png",
+    "icon": "/img/dapps/small_wallet79_logo_dd31a1d3c8_wOQgv6rca.png",
     "tags": ["dApp", "Data"]
   },
   {
     "name": "PrimeVault",
     "link": "https://www.primevault.com/",
     "description": "Next-gen custody, trading and risk infrastructure for institutional CeDeFi and enterprise digital asset operations",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/primevault_880f1d0fb2_F0DabWdo4.png",
+    "icon": "/img/dapps/primevault_880f1d0fb2_F0DabWdo4.png",
     "tags": ["DeFi", "Data"]
   },
   {
     "name": "Heartland Finance",
     "link": "https://www.heartland-finance.com/",
     "description": "A gateway to DeFi for institutional investors.",
-    "icon": "https://ik.imagekit.io/secretnetwork/images/heartfi_e369e2e07b_m5psQCOuR.png",
+    "icon": "/img/dapps/heartfi_e369e2e07b_m5psQCOuR.png",
     "tags": ["dApp", "DeFi"]
   },
   {
