--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "scripts": {
     "start": "vite --host",
     "dev": "vite --host",
-    "build": "tsc && export NODE_OPTIONS='--max_old_space_size=8192' && vite build",
-    "preview": "yarn build && vite preview",
+    "build": "tsc && NODE_OPTIONS='--max-old-space-size=8192' vite build",
+    "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.2",
     "@babel/core": "^7.26.10",
     "@buf/evmos_evmos.bufbuild_es": "^2.2.3-20240408103001-f65bdd0ffeff.1",
-    "@bufbuild/protobuf": "^2.2.3",
     "@cosmjs/stargate": "^0.33.0",
     "@emotion/styled": "^11.14.0",
     "@evmos/proto": "^0.2.1",
@@ -22,7 +21,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@keplr-wallet/cosmos": "^0.12.196",
     "@mui/material": "5.16.7",
     "@shadeprotocol/shadejs": "^1.7.0",
     "@skip-go/client": "^0.16.17",
@@ -33,7 +31,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "formik": "^2.4.6",
-    "long": "^5.2.3",
+    "long": "^5.3.1",
     "mixpanel-browser": "^2.61.1",
     "query-string": "^9.1.1",
     "react": "18.3.1",
@@ -47,6 +45,7 @@
     "react-select": "^5.9.0",
     "secretjs": "^1.15.1",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.39.0",
     "vite": "5.4.14",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0",
@@ -56,8 +55,8 @@
     "@keplr-wallet/types": "^0.12.196",
     "@types/mixpanel-browser": "^2.51.0",
     "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
     "@types/react-copy-to-clipboard": "5.0.7",
+    "@types/react-dom": "^18.3.5",
     "@types/react-modal": "^3.16.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
