--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@axelar-network/axelarjs-sdk": "^0.17.2",
-    "@babel/core": "^7.26.10",
     "@buf/evmos_evmos.bufbuild_es": "^2.2.3-20240408103001-f65bdd0ffeff.1",
     "@cosmjs/stargate": "^0.33.0",
     "@emotion/styled": "^11.14.0",
@@ -28,7 +27,6 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "bignumber.js": "^9.1.2",
-    "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "formik": "^2.4.6",
     "long": "^5.3.1",
@@ -43,10 +41,9 @@
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.28.1",
     "react-select": "^5.9.0",
-    "secretjs": "^1.15.1",
+    "secretjs": "1.15.1",
     "tailwindcss": "^3.4.17",
-    "terser": "^5.39.0",
-    "vite": "5.4.14",
+    "vite": "^5.4.14",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0",
     "zustand": "^4.4.6"
@@ -57,20 +54,18 @@
     "@types/react": "^18.3.18",
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "^18.3.5",
-    "@types/react-modal": "^3.16.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "3.5.3",
-    "sass-embedded": "^1.83.1",
     "typescript": "^5.6.3"
   },
   "overrides": {
     "protobufjs": "^7.4.0",
     "elliptic": "6.6.1",
     "axios": "1.8.2",
-    "esbuild": "0.25.0",
+    "esbuild": "0.25.1",
     "ws": "8.18.1",
-    "vite": "5.4.14",
+    "secretjs": "1.15.1",
     "@babel/runtime": "7.26.10"
   },
   "private": true,
